        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

3.7.2 to 3.8: (xxx xx, 2012)

  * Improved handling of 'illegal' VSYNC signals, which sometimes created
    'short' frames that caused massive flickering.

  * The ROM properties database now uses 'Auto' instead of 'Auto-select'
    everywhere.  This makes for less typing when running from the
    commandline.

-Have fun!


3.7.1 to 3.7.2: (June 10, 2012)

  * Fixed bug in handling filenames with the '~' character, as is used
    extensively by RomHunter rom-sets.


3.7 to 3.7.1: (June 8, 2012)

  * Note: because of TIA changes, the state file format has changed again,
          and old state files will not work with this release.

  * Improved TIA emulation with ROMs that have too few or too many
    scanlines; the output is now more accurate compared to a real TV.
    Special thanks to Omegamatrix of AtariAge for test ROMs in this area.

  * Modified hotkey for "Change console palette" (Control-f) to also
    change the display properties of the TIA.  This allows you to switch
    between NTSC/PAL/SECAM (and variant) modes dynamically.  Related to
    this, added Shift-Control-f key to step backwards through the
    available modes.

  * Added '64in1' and '128in1' multicart bankswitching schemes, which work
    the same as the 2in1/4in1/etc ones (Control-r switches to each
    consecutive game in the ROM).

  * Fixed several bugs in DPC+ bankswitching scheme, including ability
    to load and save state files.  As well, ROMs now work correctly after
    console format autodetection.

  * Fixed bugs in handling relative filenames on the commandline,