@@ -65,6 +65,7 @@ class Controller : public Serializable
   /**
     Riot debug class needs special access to the underlying controller state
   */
+  friend class M6532;
   friend class RiotDebug;
   friend class CompuMate;
 
